add createLead endpoint and add swagger to shows leads related to sales person endpoint
