# app/Http/Requests/Lead/CheckContact.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\Lead;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CheckContact extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'contact_id' => 'required|exists:contacts,id',
+            'marketing_code' => 'nullable|exists:sales_person,marketing_code',
+        ];
+    }
+}
