# routes/api.php
@@ -14,6 +14,7 @@ Route::prefix('v1')->group(function () {
     Route::post('login',[AuthController::class ,'login']);
 
     Route::get('leads', [LeadController::class, 'index'])->middleware('auth:api');
+    Route::post('leads', [LeadController::class, 'store']);
 });
 
 
